[package]
name = "tvorenia_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
html-escape = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
